Perkin-UAT/force-app/main/default/objects/Case/fields/External_Reference__c.field-meta.xml
<CustomField>
    <fullName>External_Reference__c</fullName>
    <label>External Reference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>