Perkin-UAT/force-app/main/default/objects/Case/fields/F1_Complaint_Number__c.field-meta.xml
<CustomField>
    <fullName>F1_Complaint_Number__c</fullName>
    <label>F1 Complaint Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>