Perkin-UAT/force-app/main/default/objects/Case/fields/FAQ__c.field-meta.xml
<CustomField>
    <fullName>FAQ__c</fullName>
    <description>This is created per tix - ITSFDC-3757</description>
    <label>FAQ:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FAQ Used</fullName>
            </value>
            <value>
                <fullName>FAQ Needed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>