Perkin-UAT/force-app/main/default/objects/Case/fields/Functional__c.field-meta.xml
<CustomField>
    <fullName>Functional__c</fullName>
    <description>LST Service close case process for Installations</description>
    <label>Functional</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>100% - No field replacements</fullName>
            </value>
            <value>
                <fullName>50% - Only Minor field replacements</fullName>
            </value>
            <value>
                <fullName>0% - Major field replacements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>