Perkin-UAT/force-app/main/default/objects/Case/fields/Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>Functional_Area__c</fullName>
    <label>Functional Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>General_Application_Area__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Application Performance</fullName>
            </value>
            <value>
                <fullName>Billing Inquiry</fullName>
            </value>
            <value>
                <fullName>Contract Upgrade</fullName>
            </value>
            <value>
                <fullName>Custom Applications</fullName>
            </value>
            <value>
                <fullName>Custom Report Types</fullName>
            </value>
            <value>
                <fullName>Data Export</fullName>
            </value>
            <value>
                <fullName>Data Loader</fullName>
            </value>
            <value>
                <fullName>Document Management</fullName>
            </value>
            <value>
                <fullName>Email Messaging</fullName>
            </value>
            <value>
                <fullName>ERP Connectors (SAP, JD Edwards)</fullName>
            </value>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>Excel Calculator</fullName>
            </value>
            <value>
                <fullName>Gateway Adminstrator</fullName>
            </value>
            <value>
                <fullName>General Security</fullName>
            </value>
            <value>
                <fullName>Instrument Maintenance &amp; Calibration</fullName>
            </value>
            <value>
                <fullName>LABWORKS API</fullName>
            </value>
            <value>
                <fullName>LABWORKS Desktop</fullName>
            </value>
            <value>
                <fullName>Language Translation Tool</fullName>
            </value>
            <value>
                <fullName>Local Language</fullName>
            </value>
            <value>
                <fullName>Login / Passwords</fullName>
            </value>
            <value>
                <fullName>Outbound Messaging</fullName>
            </value>
            <value>
                <fullName>Page layouts</fullName>
            </value>
            <value>
                <fullName>Personnel Training Tracker</fullName>
            </value>
            <value>
                <fullName>Process Scheduler</fullName>
            </value>
            <value>
                <fullName>Report Formulas</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Roles / Profiles / User Setup</fullName>
            </value>
            <value>
                <fullName>RS232 Connection Tool</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Security Settings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>