Perkin-UAT/force-app/main/default/objects/Case/fields/fxAINotes__c.field-meta.xml
<CustomField>
    <fullName>fxAINotes__c</fullName>
    <description>Used to record any notes from the AI engine</description>
    <inlineHelpText>Used to record any notes from the AI engine</inlineHelpText>
    <label>fxAINotes</label>
    <type>TextArea</type>
</CustomField>