Perkin-UAT/force-app/main/default/objects/Case/fields/fxAutoreplyAfter__c.field-meta.xml
<CustomField>
    <fullName>fxAutoreplyAfter__c</fullName>
    <description>This field is populated by L.FLOW 8660 and will be the timestamp when to send any next auto replies. This value is completed when an email message is caught in a loop and we need to prevent too many auto replies. C.META Emial Throttle settings are used to set the pause time.</description>
    <inlineHelpText>If this is filled in, auto replies will not get triggered or out until after this time.</inlineHelpText>
    <label>fxAutoreply After</label>
    <type>DateTime</type>
</CustomField>