Perkin-UAT/force-app/main/default/objects/Case/fields/fxCaseInfo__c.field-meta.xml
<CustomField>
    <fullName>fxCaseInfo__c</fullName>
    <description>this will be used for the S.FLOW_2405 to be able to show case info to user on the lookup list.</description>
    <formula>LEFT(&quot;Status: &quot; &amp; TEXT(Status) &amp; &quot; / Created: &quot; &amp; TEXT(CreatedDate) &amp; &quot; / Email: &quot; &amp; SuppliedEmail &amp; &quot; / Subject: &quot; &amp; Subject,255)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>info about the case on the lookup list inside the Case Merge flow</inlineHelpText>
    <label>fxCaseInfo</label>
    <type>Text</type>
</CustomField>