Perkin-UAT/force-app/main/default/objects/Case/fields/fxIsSameOBC__c.field-meta.xml
<CustomField>
    <fullName>fxIsSameOBC__c</fullName>
    <description>This will check the Owners OBC to see if it matches the Record OBC. True=Record and Owner are OK; False=The record should be realigned</description>
    <formula>OR( TEXT(Owner:User.Owned_by_Company__c) = TEXT(Owned_by_Company__c)
,TEXT(Owned_by_Company__c) = &#39;TBD&#39;
,TEXT(Owned_by_Company__c) = null
,LEFT(OwnerId,3)=&#39;00G&#39;
)</formula>
    <inlineHelpText>This will check the Owners OBC to see if it matches the Record OBC. True=Record and Owner are OK; False=The record should be realigned</inlineHelpText>
    <label>fxIsSameOBC</label>
    <type>Checkbox</type>
</CustomField>