Perkin-UAT/force-app/main/default/objects/Case/fields/fxMissingContactEmail__c.field-meta.xml
<CustomField>
    <fullName>fxMissingContactEmail__c</fullName>
    <formula>IF(ISBLANK(Contact.Email ), &quot;The Contact is missing an email, please add email to contact before editing this record&quot;,&quot;Contact email exists: &quot; &amp; Contact.Email)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>