Perkin-UAT/force-app/main/default/objects/Case/fields/fxSAP_Customer_Base_Number__c.field-meta.xml
<CustomField>
    <fullName>fxSAP_Customer_Base_Number__c</fullName>
    <description>Pulling data from Account.PKI_SAP_Customer_Base_Number__c (INC0384104).</description>
    <formula>Account.PKI_SAP_Customer_Base_Number__c</formula>
    <label>fxSAP Customer Base Number</label>
    <type>Text</type>
</CustomField>