Perkin-UAT/force-app/main/default/objects/Case/fields/General_Application_Area__c.field-meta.xml
<CustomField>
    <fullName>General_Application_Area__c</fullName>
    <label>General Application Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analytics/Reporting</fullName>
            </value>
            <value>
                <fullName>Platform Software</fullName>
            </value>
            <value>
                <fullName>Configurability</fullName>
            </value>
            <value>
                <fullName>Customization</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Help &amp; Training</fullName>
            </value>
            <value>
                <fullName>Integration / Code</fullName>
            </value>
            <value>
                <fullName>Other Applications</fullName>
            </value>
            <value>
                <fullName>Portals</fullName>
            </value>
            <value>
                <fullName>Sales Request</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>System Performance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>