Perkin-UAT/force-app/main/default/objects/Case/fields/If_YES_reported_to_HOP_Dir_of_Quality__c.field-meta.xml
<CustomField>
    <fullName>If_YES_reported_to_HOP_Dir_of_Quality__c</fullName>
    <inlineHelpText>If Yes (meaning it is a serious adverse event), begin gathering the necessary information from the CAPA input source and immediately inform the Hopkinton Director of Quality (or delegate) who will determine whether an MDR is required.</inlineHelpText>
    <label>If YES, reported to HOP Dir of Quality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>