Perkin-UAT/force-app/main/default/objects/Case/fields/IGOR_PAC_Code__c.field-meta.xml
<CustomField>
    <fullName>IGOR_PAC_Code__c</fullName>
    <formula>CatalogItem__r.IGOR_PAC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IGOR/PAC Code</label>
    <type>Text</type>
</CustomField>