Perkin-UAT/force-app/main/default/objects/Case/fields/Inactivity_Days_Mins__c.field-meta.xml
<CustomField>
    <fullName>Inactivity_Days_Mins__c</fullName>
    <formula>IF( ISPICKVAL(Status,&#39;Closed&#39;), ( DATEVALUE(ClosedDate) - Last_Reply_By_Rep__c) * 24 * 60,(TODAY() - Last_Reply_By_Rep__c) * 24 * 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactivity Mins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>