Perkin-UAT/force-app/main/default/objects/Case/fields/INF_Account_Country__c.field-meta.xml
<CustomField>
    <fullName>INF_Account_Country__c</fullName>
    <formula>Account.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Country</label>
    <type>Text</type>
</CustomField>