Perkin-UAT/force-app/main/default/objects/Case/fields/INF_Account_Gold_Support__c.field-meta.xml
<CustomField>
    <fullName>INF_Account_Gold_Support__c</fullName>
    <formula>Account.INF_Ultra_Support__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Gold Support</label>
    <type>Checkbox</type>
</CustomField>