Perkin-UAT/force-app/main/default/objects/Case/fields/INF_Application_Name__c.field-meta.xml
<CustomField>
    <fullName>INF_Application_Name__c</fullName>
    <label>Application Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>