Perkin-UAT/force-app/main/default/objects/Case/fields/INF_Blocked_Date__c.field-meta.xml
<CustomField>
    <fullName>INF_Blocked_Date__c</fullName>
    <description>Date when Status is switched to Blocked</description>
    <label>Blocked Date</label>
    <type>Date</type>
</CustomField>