Perkin-UAT/force-app/main/default/objects/Case/fields/INF_Browser__c.field-meta.xml
<CustomField>
    <fullName>INF_Browser__c</fullName>
    <label>Browser</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chrome v35+</fullName>
            </value>
            <value>
                <fullName>Firefox 28.x</fullName>
            </value>
            <value>
                <fullName>Firefox 29.x</fullName>
            </value>
            <value>
                <fullName>Firefox 30.x</fullName>
            </value>
            <value>
                <fullName>Firefox 31.x</fullName>
            </value>
            <value>
                <fullName>Firefox 32.x+</fullName>
            </value>
            <value>
                <fullName>IE 10.x</fullName>
            </value>
            <value>
                <fullName>IE 11.x</fullName>
            </value>
            <value>
                <fullName>IE 9.X</fullName>
            </value>
            <value>
                <fullName>Safari 7.0</fullName>
            </value>
            <value>
                <fullName>Safari 8.0</fullName>
            </value>
            <value>
                <fullName>Safari 9.0</fullName>
            </value>
            <value>
                <fullName>IE 7.x</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>