Perkin-UAT/force-app/main/default/objects/Case/fields/INF_Business_Impact__c.field-meta.xml
<CustomField>
    <fullName>INF_Business_Impact__c</fullName>
    <label>Business Impact</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>