Perkin-UAT/force-app/main/default/objects/Case/fields/INF_Case_Ref_Id__c.field-meta.xml
<CustomField>
    <fullName>INF_Case_Ref_Id__c</fullName>
    <formula>&#39;[ref:_&#39;
&amp;LEFT( $Organization.Id , 5)
&amp;RIGHT( $Organization.Id , 5)
&amp;&#39;._&#39;
&amp;LEFT( Id,5 )
&amp;RIGHT(Id,5)
&amp;&#39;:ref]&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Ref Id</label>
    <type>Text</type>
</CustomField>