Perkin-UAT/force-app/main/default/objects/Case/fields/INF_Case_SLA_Time__c.field-meta.xml
<CustomField>
    <fullName>INF_Case_SLA_Time__c</fullName>
    <description>Used as merge field in email template &#39;Notify support team on critical/high cases&#39;</description>
    <formula>IF( ISPICKVAL(Priority, &#39;Critical&#39;) , &#39;1 hour&#39;, IF( ISPICKVAL(Priority, &#39;High&#39;) ,&#39;4 hours&#39;, &#39; &#39;))</formula>
    <label>Case SLA Time</label>
    <type>Text</type>
</CustomField>