Perkin-UAT/force-app/main/default/objects/Case/fields/INF_Categories__c.field-meta.xml
<CustomField>
    <fullName>INF_Categories__c</fullName>
    <inlineHelpText>Chose categories before clicking on Close Case Or Send Survey or Get Update button</inlineHelpText>
    <label>Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Activation</fullName>
            </value>
            <value>
                <fullName>Activation-Bulk Activation</fullName>
            </value>
            <value>
                <fullName>Activation-Code Request</fullName>
            </value>
            <value>
                <fullName>Activation-Expired</fullName>
            </value>
            <value>
                <fullName>Activation-Firewall issues</fullName>
            </value>
            <value>
                <fullName>Activation-Flexera Issue</fullName>
            </value>
            <value>
                <fullName>Activation-Host ID mismatch</fullName>
            </value>
            <value>
                <fullName>Activation - Individual using Site Sub #</fullName>
            </value>
            <value>
                <fullName>Activation-Limit reached</fullName>
            </value>
            <value>
                <fullName>Activation-Override request</fullName>
            </value>
            <value>
                <fullName>Activation - Phone/Email Request</fullName>
            </value>
            <value>
                <fullName>Activation – Serial number being used by another user</fullName>
            </value>
            <value>
                <fullName>Activation – Serial number is associated with a different version</fullName>
            </value>
            <value>
                <fullName>Activation – Serial number not found in adminium</fullName>
            </value>
            <value>
                <fullName>Add Domain</fullName>
            </value>
            <value>
                <fullName>Authentication-LDAP/AD</fullName>
            </value>
            <value>
                <fullName>Authentication-Other</fullName>
            </value>
            <value>
                <fullName>Authentication-SAML</fullName>
            </value>
            <value>
                <fullName>Authentication-SSO</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Change Tech Admin</fullName>
            </value>
            <value>
                <fullName>Citrix</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Database Issue</fullName>
            </value>
            <value>
                <fullName>Device ID Issue</fullName>
            </value>
            <value>
                <fullName>Documented Info</fullName>
            </value>
            <value>
                <fullName>Download Problem</fullName>
            </value>
            <value>
                <fullName>End-Of-Life</fullName>
            </value>
            <value>
                <fullName>FAQ</fullName>
            </value>
            <value>
                <fullName>Fixed Later Version</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>