Perkin-UAT/force-app/main/default/objects/Case/fields/INF_Contact_Gold_Support__c.field-meta.xml
<CustomField>
    <fullName>INF_Contact_Gold_Support__c</fullName>
    <formula>Contact.INF_Ultra_Support__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Gold Support</label>
    <type>Checkbox</type>
</CustomField>