Perkin-UAT/force-app/main/default/objects/Case/fields/INF_GBL_URL__c.field-meta.xml
<CustomField>
    <fullName>INF_GBL_URL__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>