Perkin-UAT/force-app/main/default/objects/Case/fields/INF_Inactivity_Days__c.field-meta.xml
<CustomField>
    <fullName>INF_Inactivity_Days__c</fullName>
    <description>Case Inactivity days</description>
    <formula>TODAY() - Last_Reply_By_Rep__c</formula>
    <label>Inactivity Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>