Perkin-UAT/force-app/main/default/objects/Case/fields/INF_MS_Office__c.field-meta.xml
<CustomField>
    <fullName>INF_MS_Office__c</fullName>
    <label>MS-Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2010</fullName>
            </value>
            <value>
                <fullName>2011</fullName>
            </value>
            <value>
                <fullName>2013</fullName>
            </value>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>O365</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>