Perkin-UAT/force-app/main/default/objects/Case/fields/INF_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>INF_Next_Steps__c</fullName>
    <label>Next Steps / Resolution</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>