Perkin-UAT/force-app/main/default/objects/Case/fields/INF_Primary_Spotfire__c.field-meta.xml
<CustomField>
    <fullName>INF_Primary_Spotfire__c</fullName>
    <label>Primary Spotfire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Spotfire_Picklist</valueSetName>
    </valueSet>
</CustomField>