Perkin-UAT/force-app/main/default/objects/Case/fields/INF_Send_Survey__c.field-meta.xml
<CustomField>
    <fullName>INF_Send_Survey__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Survey</label>
    <type>Checkbox</type>
</CustomField>