Perkin-UAT/force-app/main/default/objects/Case/fields/INF_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>INF_Serial_Number__c</fullName>
    <description>MG changed label 3 NOV  to  &#39;Activation Code&#39; per updated nomenclature inbound from WebForm (INF Supp)</description>
    <label>Activation Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>