Perkin-UAT/force-app/main/default/objects/Case/fields/INF_Survey_No_HyperLink__c.field-meta.xml
<CustomField>
    <fullName>INF_Survey_No_HyperLink__c</fullName>
    <formula>HYPERLINK(&quot;http://perkinelmer.force.com/Survey?Id=&quot;&amp;Id&amp;&quot;&amp;mode=NO&quot;,&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey No HyperLink</label>
    <type>Text</type>
</CustomField>