Perkin-UAT/force-app/main/default/objects/Case/fields/INF_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>INF_Time_Spent__c</fullName>
    <description>Time spent by rep working on the case</description>
    <inlineHelpText>In Minutes</inlineHelpText>
    <label>Time Spent</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>