Perkin-UAT/force-app/main/default/objects/Case/fields/INF_Total_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>INF_Total_Time_Spent__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>In minutes</inlineHelpText>
    <label>Total Time Spent</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>