Perkin-UAT/force-app/main/default/objects/Case/fields/Investigation__c.field-meta.xml
<CustomField>
    <fullName>Investigation__c</fullName>
    <description>LST field service customer facing text for repairs, data pulled into mail merge for field service report</description>
    <label>Investigation</label>
    <type>TextArea</type>
</CustomField>