Perkin-UAT/force-app/main/default/objects/Case/fields/Investigation_Determination__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Determination__c</fullName>
    <inlineHelpText>Please select date.</inlineHelpText>
    <label>Investigation Determination Date</label>
    <type>Date</type>
</CustomField>