Perkin-UAT/force-app/main/default/objects/Case/fields/Is_Approved__c.field-meta.xml
<CustomField>
    <fullName>Is_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will by checked once the complaint has been approved</description>
    <inlineHelpText>This checkbox will by checked once the complaint has been approved</inlineHelpText>
    <label>Is Approved</label>
    <type>Checkbox</type>
</CustomField>