Perkin-UAT/force-app/main/default/objects/Case/fields/JIRA_Ticket__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Ticket__c</fullName>
    <label>JIRA Ticket</label>
    <length>100</length>
    <type>Text</type>
</CustomField>