Perkin-UAT/force-app/main/default/objects/Case/fields/JiraSyncId__c.field-meta.xml
<CustomField>
    <fullName>JiraSyncId__c</fullName>
    <description>The Jira ID that this case is synced to. It is a numerical value for the Jira ID and is used in the sync. . Source ATEAM 1940</description>
    <inlineHelpText>The Jira ID that this case is synced to. It is a numerical value for the Jira ID and is used in the sync. . Source ATEAM 1940</inlineHelpText>
    <label>JiraSyncId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>