Perkin-UAT/force-app/main/default/objects/Case/fields/JiraTicket__c.field-meta.xml
<CustomField>
    <fullName>JiraTicket__c</fullName>
    <description>This holds the user friendly name of the Jira Story</description>
    <inlineHelpText>This holds the user friendly name of the Jira Story</inlineHelpText>
    <label>JiraTicket</label>
    <length>25</length>
    <type>Text</type>
</CustomField>