Perkin-UAT/force-app/main/default/objects/Case/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <inlineHelpText>Please select the most appropriate Keyword</inlineHelpText>
    <label>Keyword</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Electrical cables/PCB</fullName>
            </value>
            <value>
                <fullName>Mechanical Assy</fullName>
            </value>
            <value>
                <fullName>Optical</fullName>
            </value>
            <value>
                <fullName>Optics Assy</fullName>
            </value>
            <value>
                <fullName>PCB &amp; Cable Assy</fullName>
            </value>
            <value>
                <fullName>Pressure Assy</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Supplier Parts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>