Perkin-UAT/force-app/main/default/objects/Case/fields/Last_Reply_By_Customer__c.field-meta.xml
<CustomField>
    <fullName>Last_Reply_By_Customer__c</fullName>
    <label>Last Reply By Customer</label>
    <type>Date</type>
</CustomField>