Perkin-UAT/force-app/main/default/objects/Case/fields/Legacy_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Closed_Date__c</fullName>
    <description>The original closed date from the legacy Case record.</description>
    <inlineHelpText>The original closed date from the legacy Case record.</inlineHelpText>
    <label>Legacy Closed Date</label>
    <type>DateTime</type>
</CustomField>