Perkin-UAT/force-app/main/default/objects/Case/fields/Level_3_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Level_3_Review_Date__c</fullName>
    <label>Level 3 Review Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>