Perkin-UAT/force-app/main/default/objects/Case/fields/Local_Customer_Platform__c.field-meta.xml
<CustomField>
    <fullName>Local_Customer_Platform__c</fullName>
    <description>When Customer Specific picklist is selected it should require that Local Customer Platform field be available and mandatory to fill out, created as per INC0329394.</description>
    <inlineHelpText>Required when Platform Channel value includes Customer Specific.</inlineHelpText>
    <label>Local Customer Platform</label>
    <length>50</length>
    <type>Text</type>
</CustomField>