Perkin-UAT/force-app/main/default/objects/Case/fields/Logged_in_ALERT__c.field-meta.xml
<CustomField>
    <fullName>Logged_in_ALERT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logged in ALERT</label>
    <type>Checkbox</type>
</CustomField>