Perkin-UAT/force-app/main/default/objects/Case/fields/Manual_Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>Manual_Priority_Score__c</fullName>
    <description>Request: RITM0086643</description>
    <inlineHelpText>Score in this field is added to total Priority score.</inlineHelpText>
    <label>Manual Priority Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>