Perkin-UAT/force-app/main/default/objects/Case/fields/Misdirected_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Misdirected_Call_Type__c</fullName>
    <label>Misdirected Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Source__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Internal transfer</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>