Perkin-UAT/force-app/main/default/objects/Case/fields/MKS_Issue__c.field-meta.xml
<CustomField>
    <fullName>MKS_Issue__c</fullName>
    <label>MKS Issue #</label>
    <length>8</length>
    <type>Text</type>
</CustomField>