Perkin-UAT/force-app/main/default/objects/Case/fields/No_of_INF_Case_Applications__c.field-meta.xml
<CustomField>
    <fullName>No_of_INF_Case_Applications__c</fullName>
    <label>No of Case Applications</label>
    <summaryForeignKey>INF_Case_Application__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>