Perkin-UAT/force-app/main/default/objects/Case/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <inlineHelpText>Sales Order or Invoice.  This is set based on the Reference Transaction Number.</inlineHelpText>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
                <default>true</default>
                <label>Invoice</label>
            </value>
            <value>
                <fullName>Sales Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>