Perkin-UAT/force-app/main/default/objects/Case/fields/Order_Summary__c.field-meta.xml
<CustomField>
    <fullName>Order_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Summary</label>
    <referenceTo>SAP_Order_Summary__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>