Perkin-UAT/force-app/main/default/objects/Case/fields/Original_Case_Open__c.field-meta.xml
<CustomField>
    <fullName>Original_Case_Open__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>ATEAM-1912: Assessment shows this field is not used</description>
    <label>Original Case Opened</label>
    <type>DateTime</type>
</CustomField>