Perkin-UAT/force-app/main/default/objects/Case/fields/Other_PKI_Asset__c.field-meta.xml
<CustomField>
    <fullName>Other_PKI_Asset__c</fullName>
    <label>Other PKI Asset</label>
    <length>12</length>
    <type>Text</type>
</CustomField>