Perkin-UAT/force-app/main/default/objects/Case/fields/Packaging__c.field-meta.xml
<CustomField>
    <fullName>Packaging__c</fullName>
    <description>LST service uses field to close installation cases</description>
    <label>Packaging</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Completeness__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>100% - Professional AND Protected</fullName>
            </value>
            <value>
                <fullName>50% - Professional OR Protected</fullName>
            </value>
            <value>
                <fullName>0% - Neither</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>