Perkin-UAT/force-app/main/default/objects/Case/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <inlineHelpText>Please add part # if known</inlineHelpText>
    <label>Part #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>