Perkin-UAT/force-app/main/default/objects/Case/fields/Parts_Used__c.field-meta.xml
<CustomField>
    <fullName>Parts_Used__c</fullName>
    <label>Parts Used</label>
    <type>TextArea</type>
</CustomField>